--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/user-event": "^12.8.3",
+    "aws-sdk": "^2.1046.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.4.0",
     "connect": "^3.7.0",
@@ -24,6 +25,7 @@
     "esm": "^3.2.25",
     "execution-time": "^1.4.1",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
     "express-session": "^1.17.2",
     "fs": "0.0.1-security",
     "google-auth-library": "^7.10.2",
