--- a/server/src/.env
+++ b/server/src/.env
@@ -1,10 +1,31 @@
 NODE_ENV=development
+
+
+# Cloud services
+
 DATABASE=mongodb+srv://dbUser:dbUserPassword@cluster0.dczow.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 DATABASE_LOCAL=mongodb://127.0.0.1:27017/endgame?readPreference=primary&appname=MongoDB%20Compass&directConnection=true&ssl=false
+
 GOOGLE_CLIENT_ID=660208273232-qtqmtagmj2vn1dj7rdeh7jrh5vjtkg93.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
-DEPLOY_ADDRESS=https://endgame-backend.herokuapp.com
+
+AWS_ACCESS_KEY_ID=AKIARZAWEHKROGJMIZCT
+AWS_SECRET_ACCESS_KEY=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
+AWS_BUCKET=busket23
+AWS_BUCKET_REGION=eu-west-3
+
+DEPLOY_ADDRESS=
+
+
+# Encription
+
 JWT_SECRET=12345678
 JWT_COOKIES_EXPIRES_IN=2
 JWT_SECRET_IN=90d
+
+
+# Settings
+
 CONFIRM_EMAIL=
+
+DEFAULT_AVATAR=default-avatar.jpg
