--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "firebase": "^9.0.2",
     "node-sass": "^6.0.1",
     "npm": "^8.1.3",
