icebreaker testnet ready

--- a/server/src/.env
+++ b/server/src/.env
@@ -3,7 +3,7 @@ NODE_ENV=development
 
 # Cloud services
 
-DATABASE=mongodb+srv://dbUser:dbUserPassword@cluster0.dczow.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+DATABASE=mongodb+srv://Vadim:RYCkQG0r0YhprdFs@cluster0.y4xdr.mongodb.net/myDatabase?retryWrites=true&w=majority
 DATABASE_LOCAL=mongodb://127.0.0.1:27017/endgame?readPreference=primary&appname=MongoDB%20Compass&directConnection=true&ssl=false
 
 GOOGLE_CLIENT_ID=660208273232-qtqmtagmj2vn1dj7rdeh7jrh5vjtkg93.apps.googleusercontent.com
@@ -21,6 +21,8 @@ SENDGRID_PASSWORD=SG.bmDR7J2TQoK0caw_YY9iaw.x1H09FCzZo689gGd3-4A71BEPi7Uu_bSwPLI
 
 DEPLOY_ADDRESS=
 
+INFURA_PROJECT_ID=b08e265eeeef435c83dce0fe45d0c9a2
+INFURA_NODE_URL=https://polygon-mumbai.infura.io/v3/
 
 # Encription
 
