--- a/client/package.json
+++ b/client/package.json
@@ -2,23 +2,35 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
   "dependencies": {
+    "@babel/core": "^7.16.7",
+    "@babel/preset-env": "^7.16.7",
+    "@babel/preset-react": "^7.16.7",
+    "@material-ui/core": "^4.12.3",
     "@reduxjs/toolkit": "^1.6.2",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
+    "Buffer": "0.0.0",
+    "assert": "^2.0.0",
     "axios": "^0.24.0",
+    "babel-loader": "^8.2.3",
+    "buffer": "^6.0.3",
     "eslint-plugin-unused-imports": "^2.0.0",
     "firebase": "^9.0.2",
+    "https-browserify": "^1.0.0",
     "node-sass": "^6.0.1",
     "npm": "^8.1.3",
+    "os-browserify": "^0.3.0",
+    "process": "^0.11.10",
     "react": "^17.0.2",
+    "react-app-rewired": "^2.1.11",
+    "react-confirm-alert": "^2.7.0",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "5.0.0",
     "react-stripe-checkout": "^2.6.3",
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
@@ -26,13 +38,17 @@
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.1.5",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "styled-components": "^5.3.1",
-    "web-vitals": "^1.1.2"
+    "url": "^0.11.0",
+    "web-vitals": "^2.1.2",
+    "web3": "^1.6.1"
   },
   "scripts": {
-    "start": "cross-env PORT=3000 react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "cross-env PORT=3000 react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject",
     "generate": "plop"
   },
