--- a/server/package.json
+++ b/server/package.json
@@ -51,6 +51,7 @@
     "telegraf-inline-menu": "^6.3.0",
     "util": "^0.12.4",
     "utils": "^0.3.1",
-    "validator": "^13.6.0"
+    "validator": "^13.6.0",
+    "web3": "^1.6.1"
   }
 }
