--- a/client/package.json
+++ b/client/package.json
@@ -47,7 +47,7 @@
   },
   "scripts": {
     "start": "cross-env PORT=3000 react-app-rewired start",
-    "build": "react-app-rewired build",
+    "build": "react-app-rewired build && echo '/* /index.html 200' | cat >build/_redirects ",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject",
     "generate": "plop"
