--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
 REACT_APP_GOOGLE_CLIENT_ID=660208273232-qtqmtagmj2vn1dj7rdeh7jrh5vjtkg93.apps.googleusercontent.com
-REACT_APP_API_ADDRESS=https://icebreaker123-backend.herokuapp.com/
+REACT_APP_API_ADDRESS=https://icebreaker123-backend.herokuapp.com
