--- a/server/src/.env
+++ b/server/src/.env
@@ -20,7 +20,7 @@ PASS=JaxTeller02
 SENDGRID_PASSWORD=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
 
 DEPLOY_ADDRESS=
-FRONTEND_DEPLOY_ADDRESS=https://icebreaker123.netlify.app
+FRONTEND_DEPLOY_ADDRESS=https://icebreaker-for-black-ice.netlify.app
 
 INFURA_PROJECT_ID=b08e265eeeef435c83dce0fe45d0c9a2
 INFURA_NODE_URL=https://polygon-mumbai.infura.io/v3/
