--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/user-event": "^12.8.3",
     "aws-sdk": "^2.1046.0",
+    "axios": "^0.25.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.4.0",
     "connect": "^3.7.0",
